@@ -1,13 +1,0 @@
-/*
-author: David Fischer
-matnr:  i16079
-file:   pop3client.cpp
-desc:   NVS Projekt 2 - Simpler POP3 Client mit TLS Support
-class:  5C
-catnr:  03
-*/
-
-#include "pop3client.h"
-
-using namespace std;
-using namespace asio::ip;
