@@ -1,4 +1,2 @@
-# Ignore everything in this directory
 *
-# Except this file
 !.gitignore
