@@ -29,6 +29,7 @@
 - Cleaned up save_mail funtion (now saves complete emails as .eml files with the emails subject as file name)
 *** Removed
 - Removed subprocess attempt
+- Removed backup folder, as it no longer holds any importance
 ** [0.0.3] - 2020-03-01
 *** Added
 - Add Time Tracking Badge to README
